# ats-v1-autonomous-trading-system

./: .gitignore  README.md  pyproject.toml
apps/orchestrator/: pyproject.toml
apps/orchestrator/src/ats_orchestrator/: engine.py  main.py  walkforward.py
docs/: ATS_v1.0_IMPLEMENTATION_CHECKLIST.md  ATS_v1.0_SCOPE_OPERATING_RULES.md  ATS_v1.0_TECH_STACK_LOCK.md  RUNBOOK_API_KEY_ROTATION.md  RUNBOOK_EMERGENCY_REVOKE.md
infra/compose/: .env.example  docker-compose.yml
infra/compose/loki/: config.yml
infra/compose/prometheus/: prometheus.yml
infra/config/: constitution.v1.json  runtime.env.example
libs/contracts/: pyproject.toml
libs/event-log/: pyproject.toml
libs/risk-rules/: pyproject.toml
libs/security/: pyproject.toml
services/decision-core/: pyproject.toml
services/evidence-swarm/: pyproject.toml
services/execution-kernel/: pyproject.toml
services/monitoring/: pyproject.toml
services/risk-adjudicator/: pyproject.toml
tests/: test_binance_um_client.py  test_constitution.py  test_contracts.py  test_decision_core_api.py  test_decision_core_engine.py  test_event_log.py  test_evidence_compiler.py  test_evidence_sanity.py  test_execution_kernel_api.py  test_execution_kernel_engine.py  test_monitoring_api.py  test_monitoring_engine.py  test_orchestrator_api.py  test_orchestrator_engine.py  test_release_manifest.py  test_replay.py  test_risk_adjudicator_sizing.py  test_risk_precedence.py  test_security_health.py  test_security_secrets.py  test_state_machine.py  test_walkforward.py
tools/: generate_release_manifest.py  replay_risk_decisions.py  run_walkforward_5y.py  write_market_heartbeat.py
(+25 files in other folders)
