[project]
name = "ats-workspace"
version = "0.1.0"
description = "Autonomous Trading System v1.0 workspace"
requires-python = ">=3.14,<3.15"
readme = "README.md"
dependencies = []

[tool.uv.workspace]
members = [
  "apps/orchestrator",
  "services/evidence-swarm",
  "services/decision-core",
  "services/risk-adjudicator",
  "services/execution-kernel",
  "services/monitoring",
  "libs/contracts",
  "libs/risk-rules",
  "libs/event-log",
]

[tool.uv.sources]
ats-contracts = { workspace = true }
ats-risk-rules = { workspace = true }
ats-event-log = { workspace = true }

[dependency-groups]
dev = [
  "hypothesis==6.151.9",
  "mypy==1.19.1",
  "pytest==9.0.2",
  "pytest-asyncio==1.3.0",
  "ruff==0.15.4",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC", "RUF"]

[tool.mypy]
python_version = "3.14"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
