[project]
name = "ats-orchestrator"
version = "0.1.0"
requires-python = ">=3.14,<3.15"
dependencies = [
  "ats-contracts",
  "ats-decision-core",
  "ats-evidence-swarm",
  "ats-event-log",
  "ats-execution-kernel",
  "ats-monitoring",
  "ats-risk-adjudicator",
  "ats-risk-rules",
  "ats-security",
  "fastapi==0.135.1",
  "httpx==0.28.1",
  "nats-py==2.14.0",
  "pydantic==2.12.5",
  "structlog==25.5.0",
  "uvicorn==0.41.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
